--- a/src/components/TableRow.module.scss
+++ b/src/components/TableRow.module.scss
@@ -28,3 +28,7 @@ img.bg {
     background-color: rgba($color: black, $alpha: 0.1);
     padding: .5em;
 }
+
+.align_right {
+    text-align: right;
+}
