--- a/src/components/Settings.module.scss
+++ b/src/components/Settings.module.scss
@@ -9,6 +9,8 @@
 
     @media screen and (max-width:600px) {
         justify-content: center;
+        align-items: center;
+        width: 100%;
     }
 
     img {
@@ -28,6 +30,10 @@
         justify-content: space-between;
         border-radius: 3px;
         min-width: 7rem;
+
+        @media screen and (max-width: 600px) {
+            min-width: 5rem;
+        }
     }
 
     input {
@@ -64,6 +70,7 @@
         background-color: #ddd;
         color: #555;
         cursor: pointer;
+        padding-right: 10px;
 
         input {
             width: 20px;
