Added column for free pulls during limited events

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -106,7 +106,7 @@ table {
 
     th {
         background-color: #eee;
-        border: 1px solid #ddd;
+        border: 1px solid #ccc;
         text-align: center;
 
         &>span {
