--- a/src/components/Settings.module.scss
+++ b/src/components/Settings.module.scss
@@ -38,8 +38,8 @@
 
     input {
         font-size: inherit;
-        max-width: 4rem;
-        padding: .4em;
+        max-width: 4.5rem;
+        margin-right: .4em;
         text-align: center;
         border: none;
         // background-color: #eee;
