Added link to feedback form

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -208,7 +208,8 @@ footer {
 
     a {
         text-decoration: none;
-        color: black;
+        color: #0c4c64;
+        border-bottom: 2px solid #abc1c9;
     }
 
     img {
