--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,18 +5,12 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
 
-    @media screen and (max-width: 600px) {
-        // $header-height: 8rem;
-    }
-
     header {
         position: relative;
         background-color: #f4f4f4;
         top: 0;
         font-weight: normal;
         z-index: 9;
-
-        // height: $header-height;
 
         &>main {
             max-width: 1200px;
@@ -25,6 +19,17 @@
             align-items: center;
             position: relative;
             margin: 0 auto;
+
+            &>img {
+                max-height: 80px;
+                top: 0;
+                left: 0;
+                z-index: 1;
+
+                @media screen and (max-width: 600px) {
+                    display: none;
+                }
+            }
         }
 
         h1 {
@@ -43,26 +48,11 @@
             }
         }
 
-        img {
-            max-height: 80px;
-            top: 0;
-            left: 0;
-            z-index: 1;
-
-            @media screen and (max-width: 600px) {
-                display: none;
-            }
-        }
     }
 
     .table_container {
-        // opacity: 1;
-        // max-width: 100vw;
-        // overflow: auto;
-
         overflow-y: auto;
         height: 100%;
-        // max-height: calc(100vh - $header-height);
     }
 
     thead {
@@ -77,7 +67,6 @@
 }
 
 table {
-    // width: 100%;
     border-collapse: collapse;
     margin: 0 auto;
     margin-bottom: 2vh;
