Added dark mode

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -10,3 +10,9 @@ pre {
     background-color: #eee;
     border: 1px solid #ddd;
 }
+
+fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
