--- a/src/components/TableRow.module.scss
+++ b/src/components/TableRow.module.scss
@@ -1,14 +1,73 @@
+@use "../colors.scss";
+
 tr.TableRow {
+
+    &[data-dark=false] {
+        color: colors.$table-row-text-light;
+    }
+
+    &[data-dark=true] {
+        color: colors.$table-row-text-dark;
+    }
+
+    &[data-even=true][data-dark=false] {
+        background-color: colors.$table-row-bg-light;
+    }
+
+    &[data-even=false][data-dark=true] {
+        background-color: colors.$table-row-bg-dark;
+    }
+
+    // Orundum cells
+    td[data-resource=orundum][data-dark=true] {
+        color: colors.$table-cell-orundum-text-dark;
+    }
+
+    td[data-resource=orundum][data-dark=false] {
+        color: colors.$table-cell-orundum-text-light;
+    }
+
+    // Ticket cells
+    td[data-resource=tickets][data-dark=true] {
+        color: colors.$table-cell-ticket-text-dark;
+    }
+
+    td[data-resource=tickets][data-dark=false] {
+        color: colors.$table-cell-ticket-text-light;
+    }
+
+    // OP cells
+    td[data-resource=op][data-dark=true] {
+        color: colors.$table-cell-op-text-dark;
+    }
+
+    td[data-resource=op][data-dark=true] {
+        color: colors.$table-cell-op-text-light;
+    }
+
     td[data-column=pulls-total] {
-        background-color: #e8eeef;
-        color: #255a84;
-        // padding: .2em .4em;
-        // border-radius: 1rem;
+
         height: 100%;
         text-align: center;
 
-        &[data-even=true] {
-            background-color: #cddce7;
+        &[data-dark=true][data-even=true] {
+            background-color: colors.$table-cell-pulls-bg-even-dark;
+            color: colors.$table-cell-pulls-text-dark;
+        }
+
+        &[data-dark=true][data-even=false] {
+            background-color: colors.$table-cell-pulls-bg-odd-dark;
+            color: colors.$table-cell-pulls-text-dark;
+        }
+
+        &[data-dark=false][data-even=true] {
+            background-color: colors.$table-cell-pulls-bg-even-light;
+            color: colors.$table-cell-pulls-text-light;
+        }
+
+        &[data-dark=false][data-even=false] {
+            background-color: colors.$table-cell-pulls-bg-odd-light;
+            color: colors.$table-cell-pulls-text-light;
         }
     }
 
@@ -22,14 +81,20 @@ tr.TableRow {
     }
 
     td[data-column=pulls-free]>* {
-        color: rgb(78, 61, 10);
-        background-color: rgb(243, 230, 202);
         height: .8rem;
         padding: .2rem;
         border-radius: .6rem;
         display: flex;
         align-items: center;
         justify-content: center;
+
+        color: colors.$badge-free-pulls-text-light;
+        background-color: colors.$badge-free-pulls-bg-light;
+
+        &[data-dark=true] {
+            color: colors.$badge-free-pulls-text-dark;
+            background-color: colors.$badge-free-pulls-bg-dark;
+        }
     }
 }
 
