--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -14,6 +14,29 @@
         color: colors.$window-text-dark;
     }
 
+    &>button {
+        color: inherit;
+        margin: 0 auto;
+        background: none;
+        border: none;
+        padding: .2em .4em;
+        background-color: rgba($color: black, $alpha: 0.05);
+        border-radius: 3px;
+        border: 1px solid rgba($color: black, $alpha: 0.1);
+        box-shadow: 0 2px 2px rgba($color: black, $alpha: 0.1);
+        cursor: pointer;
+
+        // &[data-dark=true] {}
+
+        &:hover {
+            background-color: rgba($color: black, $alpha: 0.03);
+        }
+
+        &:active {
+            background-color: rgba($color: black, $alpha: 0.07);
+        }
+    }
+
     .message_box {
         padding: 20px;
         margin: 0 auto;
