--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -25,6 +25,8 @@
         border: 1px solid rgba($color: black, $alpha: 0.1);
         box-shadow: 0 2px 2px rgba($color: black, $alpha: 0.1);
         cursor: pointer;
+        display: flex;
+        align-items: center;
 
         // &[data-dark=true] {}
 
