--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -3,15 +3,15 @@
     background: none;
     border: none;
     padding: .2em .4em;
-    background-color: rgba($color: black, $alpha: 0.05);
     border-radius: 3px;
     border: 1px solid rgba($color: black, $alpha: 0.2);
     box-shadow: 0 2px 2px rgba($color: black, $alpha: 0.1);
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: center;
 
-    // &[data-dark=true] {}
+    background-color: rgba($color: black, $alpha: 0.05);
 
     &:hover {
         background-color: rgba($color: black, $alpha: 0.03);
