--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -19,7 +19,7 @@ $badge-ticket-bg-dark: rgb(121, 163, 76);
 $badge-ticket-text-dark: rgb(60, 83, 21);
 
 // OP badge
-$badge-op-bg-light: rgb(238, 211, 194);
+$badge-op-bg-light: #e9deae;
 $badge-op-text-light: rgb(132, 89, 20);
 $badge-op-bg-dark: #cab265;
 $badge-op-text-dark: rgb(77, 50, 15);
