--- a/src/components/StartingResources.module.scss
+++ b/src/components/StartingResources.module.scss
@@ -1,7 +1,6 @@
-.Settings {
+.StartingResources {
     display: flex;
     flex-wrap: wrap;
-    // grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     margin: 10px;
     border: none;
