--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -14,6 +14,8 @@
         background-color: colors.$window-bg-dark;
         color: colors.$window-text-dark;
     }
+
+
 }
 
 .message_box {
@@ -84,9 +86,11 @@
             color: colors.$table-cell-pulls-text-light;
         }
     }
+
+
 }
 
-header {
+header.Header {
     position: relative;
     top: 0;
     font-weight: normal;
