--- a/src/components/table/Table.module.scss
+++ b/src/components/table/Table.module.scss
@@ -1,5 +1,5 @@
-@use "../styles/colors.scss";
-@use "../styles/table.scss" as table;
+@use "../../styles/colors.scss";
+@use "../../styles/table.scss" as table;
 
 .Table {
     overflow-y: auto;
