--- a/src/components/menus/PullsMenu.module.scss
+++ b/src/components/menus/PullsMenu.module.scss
@@ -122,6 +122,19 @@ button.btn_open_menu {
     }
 }
 
+.pull_odds {
+    background-color: rgba($color: black, $alpha: 0.05);
+    box-shadow: 0 1px 2px rgba($color: black, $alpha: 0.2);
+    padding: .2em .4em;
+    border-radius: 5px;
+
+    td:last-child {
+        text-align: right;
+        font-weight: bold;
+        color: darkgreen;
+    }
+}
+
 .Arrow {
     fill: white;
 }
