Mark event with TBD dates with stripes

--- a/src/components/table/TableRow.module.scss
+++ b/src/components/table/TableRow.module.scss
@@ -206,6 +206,7 @@ tr.TableRow {
 .day_cell {
     position: relative;
     z-index: 1;
+    overflow: hidden;
 
     &[data-cleared=true] label {
         opacity: 0.5;
